@@ -4950,6 +4950,9 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -Better 'generic_usd' / 'generic_btc' market support (via coingecko using asset API IDs)
 
 
+-Added 'generic_eth' market
+
+
 v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
 VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
 MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
